src/containers/Repository/Repository.css
.repository {
  padding: 6px;
  border: 1px solid #eaeaea;
  border-radius: 4px;
}

  .repository__name {
    font-size: 22px;
    font-family: 'Raleway Medium', sans-serif;
    letter-spacing: 1px;
    margin: 0;
    margin-bottom: 6px;
    color: #2f2f2f;
  }

  .issuelist {
    list-style: none;
    margin: 0;
    padding: 0;
  }

    .issuelist__item {}


@media screen and (min-width: 720px) {
  .repository {
    padding: 12px;
  }
}

